--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
+import uk.swapx.build.Deps
+import uk.swapx.build.Versions
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id "com.github.ben-manes.versions" version "0.42.0"
 }
 
 android {
@@ -37,7 +43,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.2.0-beta01'
+        kotlinCompilerExtensionVersion Versions.composeCompiler
     }
     packagingOptions {
         resources {
@@ -47,17 +53,47 @@ android {
 }
 
 dependencies {
+    // Accompanist
+    implementation Deps.Accompanist.insetsUi
+    implementation Deps.Accompanist.navigationMaterial
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
-    implementation "androidx.compose.ui:ui:$compose_ui_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.2.0-beta01'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+    // Activity
+    implementation Deps.Compose.activity
+
+    // Compose UI
+    implementation Deps.Compose.Ui.ui
+
+    // Hilt
+    implementation Deps.Hilt.hilt
+    kapt Deps.Hilt.compiler
+    implementation Deps.Hilt.navigation
+
+    // Kotlin
+    implementation Deps.Kotlin.ktx
+
+    // Lifecycle
+    implementation Deps.Lifecycle.runtimeKtx
+    implementation Deps.Lifecycle.viewModelCompose
+
+    // Material
+    implementation Deps.Material.material3
+    implementation Deps.Material.material
+
+    // Navigation
+    implementation Deps.Compose.navigation
+
+    // Retrofit
+    implementation Deps.Retrofit.retrofit
+    implementation Deps.Retrofit.gson
+
+    // Test suite
+    testImplementation Deps.Junit.junit
+    androidTestImplementation Deps.Junit.ext
+    androidTestImplementation Deps.Junit.espresso
+    androidTestImplementation Deps.Compose.Ui.testing
+
+    // Tooling
+    debugImplementation Deps.Compose.Ui.tooling
+    debugImplementation Deps.Compose.Ui.testManifest
+    implementation Deps.Compose.Ui.toolingPreview
 }
