--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,25 @@
+import uk.swapx.build.Plugins
+
 buildscript {
-    ext {
-        compose_ui_version = '1.2.0-beta01'
+    repositories {
+        google()
+        mavenCentral()
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.4.0-alpha08' apply false
-    id 'com.android.library' version '7.4.0-alpha08' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+
+    dependencies {
+        classpath Plugins.gradlePlugin
+        classpath Plugins.hiltGradlePlugin
+        classpath Plugins.kotlinGradlePlugin
+    }
+}
+
+subprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
