Added datastore dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath Plugins.gradlePlugin
         classpath Plugins.hiltGradlePlugin
         classpath Plugins.kotlinGradlePlugin
+        classpath Plugins.protoBufGradlePlugin
     }
 }
 
