--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id "com.github.ben-manes.versions" version "0.42.0"
+    id 'com.google.protobuf'
 }
 
 android {
@@ -52,6 +53,29 @@ android {
     }
 }
 
+protobuf {
+    protoc {
+        // TODO: Work out why protoBuf version can't come from dependencies file.
+
+        // For Apple M1, add protoc_platform=osx-x86_64 in $HOME/.gradle/gradle.properties
+        if (project.hasProperty('protoc_platform')) {
+            artifact = "com.google.protobuf:protoc:4.0.0-rc-2:${protoc_platform}"
+        } else {
+            artifact = "com.google.protobuf:protoc:4.0.0-rc-2"
+        }
+    }
+
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                java {
+                    option 'lite'
+                }
+            }
+        }
+    }
+}
+
 dependencies {
     // Accompanist
     implementation Deps.Accompanist.insetsUi
@@ -62,6 +86,10 @@ dependencies {
 
     // Compose UI
     implementation Deps.Compose.Ui.ui
+
+    // DataStore
+    implementation Deps.Datastore.datastore
+    implementation Deps.Datastore.protoBuf
 
     // Flipper
     debugImplementation Deps.Flipper.flipper
